--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
               </div>
             </div>
 
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 max-h-40">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
               <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 h-full">
                 <div class="flex justify-between p-4 md:p-6 pb-0 md:pb-0">
                     <h5
