--- a/index.html
+++ b/index.html
@@ -1357,38 +1357,158 @@
             </div>
 
             <div class="grid lg:grid-cols-4 grid-cols-1">
-              <div class="flex flex-col gap-4 p-4 bg-white dark:bg-dark200 max-w-sm w-full rounded-xl">
+              <div
+                class="flex flex-col gap-4 p-4 bg-white dark:bg-dark200 max-w-sm w-full rounded-xl"
+              >
                 <div class="flex items-center justify-between">
-                  <span class="text-base font-semibold text-black dark:text-white">Ludo Game</span>
+                  <span
+                    class="text-base font-semibold text-black dark:text-white"
+                    >Ludo Game</span
+                  >
                 </div>
 
-                <div class="flex flex-col gap-2 items-center justify-center pt-4 border-t border-gray-500">
-                  <span class="font-semibold text-sm text-xl lg:text-2xl">1,059</span>
-                  <span class="font-light text-gray-500 text-xs">84% of total (1,260)</span>
+                <div
+                  class="flex flex-col gap-2 items-center justify-center pt-4 border-t border-gray-500"
+                >
+                  <span class="font-semibold text-sm text-xl lg:text-2xl text-gray-900 dark:text-white"
+                    >1,059</span
+                  >
+                  <span class="font-light text-gray-500 dark:text-gray-100 text-xs"
+                    >84% of total (1,260)</span
+                  >
                 </div>
               </div>
             </div>
 
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
-              <div class="w-full bg-white rounded-lg shadow dark:bg-dark200 h-full">
+              <div
+                class="w-full bg-white rounded-lg shadow dark:bg-dark200 h-full"
+              >
                 <div class="flex justify-between p-4 md:p-6 pb-0 md:pb-0">
-                    <h5
-                      class="leading-none text-lg lg:text-xl font-semibold text-gray-900 dark:text-white pb-2 capitalize"
+                  <h5
+                    class="leading-none text-lg lg:text-xl font-semibold text-gray-900 dark:text-white pb-2 capitalize"
+                  >
+                    active users per month
+                  </h5>
+
+                  <div class="flex gap-3 items-center">
+                    <p class="text-gray-900 dark:text-white">View by:</p>
+                    <div
+                      class="flex space-x-2 border border-gray-500 rounded-xl select-none"
                     >
-                     active users per month
-                    </h5>
+                      <label
+                        class="radio flex flex-grow items-center justify-center rounded-lg p-1 cursor-pointer"
+                      >
+                        <input
+                          type="radio"
+                          name="radio"
+                          value="days"
+                          class="peer hidden"
+                          checked=""
+                        />
+                        <span
+                          class="peer-checked:bg-primary peer-checked:text-white text-gray-700 dark:text-white p-2 rounded-lg transition duration-150 ease-in-out text-sm"
+                          >Days</span
+                        >
+                      </label>
+  
+                      <label
+                        class="radio flex flex-grow items-center justify-center rounded-lg p-1 cursor-pointer"
+                      >
+                        <input
+                          type="radio"
+                          name="radio"
+                          value="month"
+                          class="peer hidden"
+                        />
+                        <span
+                          class="peer-checked:bg-primary peer-checked:text-white text-gray-700 dark:text-white p-2 rounded-lg transition duration-150 ease-in-out text-sm"
+                          >Month</span
+                        >
+                      </label>
+                    </div>
+                  </div>
                 </div>
-                <div id="labels-chart-analytics" class="px-2.5 min-h-full"></div>
+                <div
+                  id="labels-chart-analytics"
+                  class="px-2.5 min-h-full"
+                ></div>
               </div>
 
-                <div class="max-w-smm llg:max-w-lg w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6">
-                  <h1 class="leading-none text-lg lg:text-xl font-semibold text-gray-900 dark:text-white pb-2 capitalize mb-8">number of fraud per month</h1>
+              <div
+                class="max-w-smm llg:max-w-lg w-full bg-white rounded-lg shadow dark:bg-dark200 p-4 md:p-6"
+              >
+                <h1
+                  class="leading-none text-lg lg:text-xl font-semibold text-gray-900 dark:text-white pb-2 capitalize mb-8"
+                >
+                  number of fraud per month
+                </h1>
 
-                  <div id="bar-chart"></div>
+                <div id="bar-chart"></div>
+              </div>
+            </div>
+
+            <div class="flex flex-col">
+              <h1 class="text-md font-semibold text-black dark:text-white">Games</h1>
+              <div class="relative overflow-x-auto shadow rounded-lg mt-4">
+                <table
+                  class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
+                >
+                  <thead
+                    class="text-xs text-gray-700 uppercase bg-gray-200 dark:bg-dark300 dark:text-gray-400 p-2"
+                  >
+                    <tr>
+                      <th scope="col" class="px-6 py-3 text-primary">Games</th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Online Users
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        Total Winning
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                        New Users
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">
+                       Banned Users
+                      </th>
+                      <th scope="col" class="px-6 py-3 text-primary">Deleted User</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tbodyGames"></tbody>
+                </table>
+              </div>
+              <div
+                class="flex items-center flex-wrap justify-between mt-6 lg:mt-10"
+              >
+                <!-- Previous Button -->
+                <div class="flex">
+                  <a
+                    href="#"
+                    class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-dark200 dark:border-dark100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                  >
+                    Previous
+                  </a>
+
+                  <!-- Next Button -->
+                  <a
+                    href="#"
+                    class="flex items-center justify-center px-3 h-8 ms-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-dark200 dark:border-dark100 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+                  >
+                    Next
+                  </a>
                 </div>
 
-                
-
+                <span class="text-sm text-gray-700 dark:text-gray-400">
+                  Page
+                  <span class="font-semibold text-gray-900 dark:text-white"
+                    >1</span
+                  >
+                  of
+                  <span class="font-semibold text-gray-900 dark:text-white"
+                    >10</span
+                  >
+                </span>
+              </div>
             </div>
           </div>
         </main>
