--- a/index.html
+++ b/index.html
@@ -1384,14 +1384,14 @@
               <div
                 class="w-full bg-white rounded-lg shadow dark:bg-dark200 h-full"
               >
-                <div class="flex justify-between p-4 md:p-6 pb-0 md:pb-0">
+                <div class="flex justify-between items-center sm:flex-wrap p-4 md:p-6 pb-0 md:pb-0">
                   <h5
                     class="leading-none text-lg lg:text-xl font-semibold text-gray-900 dark:text-white pb-2 capitalize"
                   >
                     active users per month
                   </h5>
 
-                  <div class="flex gap-3 items-center">
+                  <div class="flex gap-1 items-center">
                     <p class="text-gray-900 dark:text-white">View by:</p>
                     <div
                       class="flex space-x-2 border border-gray-500 rounded-xl select-none"
