--- a/index.html
+++ b/index.html
@@ -128,22 +128,23 @@
                 class="block py-2 px-4 text-base font-medium text-gray-700 bg-white dark:bg-dark200 dark:text-gray-300">
                 Settings
               </div>
-              <div class="z-50 bg-gray-50 dark:bg-dark100 flex flex-col gap-2 text-[10px] p-3 max-h-80 overflow-x-auto">
-                <ul class="flex flex-col w-full pb-10">
+              <div
+                class="z-50 bg-gray-50 dark:bg-dark100 flex flex-col gap-2 text-[10px] pp-3 max-h-80 overflow-x-auto">
+                <ul class="flex flex-col w-full pb-10 text-gray-700 dark:text-gray-300">
                   <li>
-                    <a class="text-xs hover:font-medium text-gray-500 dark:text-white hover:text-gray-900 py-4 w-full"
+                    <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
                       href="/">Demo Mode</a>
                   </li>
                   <li>
-                    <a class="text-xs hover:font-medium text-gray-500 dark:text-white hover:text-gray-900 py-4 w-full"
+                    <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
                       href="/">API Integration</a>
                   </li>
                   <li>
-                    <a class="text-xs hover:font-medium text-gray-500 dark:text-white hover:text-gray-900 py-4 w-full"
+                    <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
                       href="/">Security</a>
                   </li>
                   <li>
-                    <a class="text-xs hover:font-medium text-gray-500 dark:text-white hover:text-gray-900 py-4 w-full"
+                    <a class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"
                       href="/">Bugs</a>
                   </li>
                 </ul>
@@ -290,8 +291,8 @@
               class="hidden z-50 my-4 w-56 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-dark300 dark:divide-gray-600 rounded-xl"
               id="dropdown">
               <div class="py-3 px-4">
-                <span class="block text-sm font-semibold text-gray-900 dark:text-white">Neil Sims</span>
-                <span class="block text-sm text-gray-900 truncate dark:text-white">name@flowbite.com</span>
+                <span class="block text-sm font-semibold text-gray-900 dark:text-white">John Doe</span>
+                <span class="block text-sm text-gray-900 truncate dark:text-white">johndoe21@yahoo.com</span>
               </div>
               <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
                 <li>
@@ -303,50 +304,6 @@
                   <a href="#"
                     class="block py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:text-gray-400 dark:hover:text-white">Account
                     settings</a>
-                </li>
-              </ul>
-              <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
-                <li>
-                  <a href="#"
-                    class="flex items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"><svg
-                      class="mr-2 w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd"
-                        d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-                        clip-rule="evenodd"></path>
-                    </svg>
-                    My likes</a>
-                </li>
-                <li>
-                  <a href="#"
-                    class="flex items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white"><svg
-                      class="mr-2 w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path
-                        d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z">
-                      </path>
-                    </svg>
-                    Collections</a>
-                </li>
-                <li>
-                  <a href="#"
-                    class="flex justify-between items-center py-2 px-4 text-sm hover:bg-gray-100 dark:hover:bg-dark500 dark:hover:text-white">
-                    <span class="flex items-center">
-                      <svg aria-hidden="true" class="mr-2 w-5 h-5 text-primary-600 dark:text-primary-500"
-                        fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd"
-                          d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
-                          clip-rule="evenodd"></path>
-                      </svg>
-                      Pro version
-                    </span>
-                    <svg aria-hidden="true" class="w-5 h-5 text-gray-400" fill="currentColor" viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd"
-                        d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-                        clip-rule="evenodd"></path>
-                    </svg>
-                  </a>
                 </li>
               </ul>
               <ul class="py-1 text-gray-700 dark:text-gray-300" aria-labelledby="dropdown">
@@ -437,33 +394,33 @@
                 </button>
                 <ul id="dropdown-pages" class="hidden py-2 space-y-2">
                   <li>
-                    <a href="#"
+                    <a href="user-info.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">User
                       Info
                     </a>
                   </li>
                   <li>
-                    <a href="#"
+                    <a href="recharge-log.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Recharge
                       Log
                     </a>
                   </li>
                   <li>
-                    <a href="#"
+                    <a href="withdrawal-log.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Withdrawal
                       Log
                     </a>
                   </li>
 
                   <li>
-                    <a href="#"
+                    <a href="game-record.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Game
                       Record
                     </a>
                   </li>
 
                   <li>
-                    <a href="#"
+                    <a href="phone-otp"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                       OTP
                     </a>
@@ -471,7 +428,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#"
+                <a href="payment-overview.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -483,7 +440,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="fraud.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -495,7 +452,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="message.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -511,7 +468,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="spin-game.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -523,7 +480,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="fish-game.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -535,7 +492,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="ludo-game.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -557,7 +514,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"
+                <a href="soccer-game.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -608,7 +565,7 @@
                 </ul>
               </li>
               <li>
-                <a href="#"
+                <a href="user-settings.html"
                   class="flex items-center p-2 text-base font-medium text-gray-900 rounded-lg transition duration-75 hover:bg-primary hover:text-white dark:text-white group">
                   <svg xmlns="http://www.w3.org/2000/svg"
                     class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-white dark:group-hover:text-white"
@@ -702,7 +659,7 @@
             </ul>
 
             <a href="/"
-              class="flex items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary hover:text-white group border-t border-yellow-500 hover:border-none">
+              class="hidden items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary hover:text-white group border-t border-yellow-500 hover:border-none">
               <!-- Avatar -->
               <div class="flex items-center gap-1">
                 <img class="w-8 h-8 rounded-full object-cover object-center"
@@ -747,7 +704,7 @@
                     </svg>
                   </div>
                   <input type="text" id="phone-input" aria-describedby="helper-text-explanation"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full ps-10 p-2.5 dark:bg-dark300 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
                     pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required />
                 </div>
               </div>
