--- a/index.html
+++ b/index.html
@@ -687,8 +687,9 @@
           <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
             Phone Number
           </h1>
-          <div class="p-4 bg-white dark:bg-dark200 rounded-lg mb-4">
-            <h2 class="mb-10 text-gray-900 dark:text-white font-semibold text-center text-xl">Add phone number to
+          <div class="p-4 bg-white dark:bg-dark200 rounded-lg lg:mb-4">
+            <h2 class="mb-10 text-gray-900 dark:text-white font-semibold text-center text-base lg:text-xl">Add phone
+              number to
               dashboard
             </h2>
             <form class="max-w-sm mx-auto flex flex-col items-center" action="">
@@ -709,7 +710,7 @@
                 </div>
               </div>
               <button type="submit"
-                class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center me-2 w-full my-10">
+                class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center me-2 w-full my-5 lg:my-10">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 me-2" viewBox="0 0 32 32">
                   <path fill="currentColor"
                     d="M14 4c-3.854 0-7 3.146-7 7c0 2.41 1.23 4.552 3.094 5.813C6.527 18.343 4 21.88 4 26h2c0-4.43 3.57-8 8-8c1.376 0 2.654.358 3.78.97A7.993 7.993 0 0 0 16 24c0 4.406 3.594 8 8 8c4.406 0 8-3.594 8-8c0-4.406-3.594-8-8-8a7.98 7.98 0 0 0-4.688 1.53c-.442-.277-.92-.51-1.406-.718A7.018 7.018 0 0 0 21 11c0-3.854-3.146-7-7-7m0 2c2.773 0 5 2.227 5 5s-2.227 5-5 5s-5-2.227-5-5s2.227-5 5-5m10 12c3.326 0 6 2.674 6 6s-2.674 6-6 6s-6-2.674-6-6s2.674-6 6-6m-1 2v3h-3v2h3v3h2v-3h3v-2h-3v-3z" />
@@ -760,8 +761,9 @@
           <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
             Email
           </h1>
-          <div class="p-4 bg-white dark:bg-dark200 rounded-lg mb-4">
-            <h2 class="mb-10 text-gray-900 dark:text-white font-semibold text-center text-xl">Add email to dashboard
+          <div class="p-4 bg-white dark:bg-dark200 rounded-lg lg:mb-4">
+            <h2 class="mb-10 text-gray-900 dark:text-white font-semibold text-center text-base lg:text-xl">Add email to
+              dashboard
             </h2>
             <form class="max-w-sm mx-auto flex flex-col items-center" action="">
               <div class="flex flex-row items-center justify-between w-full">
@@ -783,7 +785,7 @@
                 </div>
               </div>
               <button type="submit"
-                class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center me-2 w-full my-10">
+                class="text-white bg-primary hover:bg-primary focus:ring-2 focus:outline-none focus:ring-primary font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center justify-center me-2 w-full my-5 lg:my-10">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-3.5 h-3.5 me-2" viewBox="0 0 32 32">
                   <path fill="currentColor"
                     d="M14 4c-3.854 0-7 3.146-7 7c0 2.41 1.23 4.552 3.094 5.813C6.527 18.343 4 21.88 4 26h2c0-4.43 3.57-8 8-8c1.376 0 2.654.358 3.78.97A7.993 7.993 0 0 0 16 24c0 4.406 3.594 8 8 8c4.406 0 8-3.594 8-8c0-4.406-3.594-8-8-8a7.98 7.98 0 0 0-4.688 1.53c-.442-.277-.92-.51-1.406-.718A7.018 7.018 0 0 0 21 11c0-3.854-3.146-7-7-7m0 2c2.773 0 5 2.227 5 5s-2.227 5-5 5s-5-2.227-5-5s2.227-5 5-5m10 12c3.326 0 6 2.674 6 6s-2.674 6-6 6s-6-2.674-6-6s2.674-6 6-6m-1 2v3h-3v2h3v3h2v-3h3v-2h-3v-3z" />
