--- a/index.html
+++ b/index.html
@@ -1692,7 +1692,7 @@
                     <th scope="col" class="px-6 py-3 text-primary">
                       Date and Time
                     </th>
-                    <th scope="col" class="px-6 py-3 text-primary">Remark</th>
+                    <th scope="col" class="px-6 py-3 text-primary">Status</th>
                   </tr>
                 </thead>
                 <tbody id="tbodySpin"></tbody>
@@ -1819,7 +1819,7 @@
                     <th scope="col" class="px-6 py-3 text-primary">
                       Date and Time
                     </th>
-                    <th scope="col" class="px-6 py-3 text-primary">Remark</th>
+                    <th scope="col" class="px-6 py-3 text-primary">Status</th>
                   </tr>
                 </thead>
                 <tbody id="tbodyFish"></tbody>
