link each pages

--- a/analytics.html
+++ b/analytics.html
@@ -432,7 +432,7 @@
                                     </li>
 
                                     <li>
-                                        <a href="phone-otp"
+                                        <a href="phone-otp.html"
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                                             OTP
                                         </a>
@@ -562,19 +562,14 @@
                                 </button>
                                 <ul id="dropdown-topUp" class="hidden py-2 space-y-2">
                                     <li>
-                                        <a href="#"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Sign
-                                            In</a>
+                                        <a href="unreg-number.html"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white truncate">Unregistered
+                                            Numbers</a>
                                     </li>
                                     <li>
-                                        <a href="#"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Sign
-                                            Up</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Forgot
-                                            Password</a>
+                                        <a href="top-gamers.html"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Top
+                                            Gamers</a>
                                     </li>
                                 </ul>
                             </li>
@@ -616,19 +611,9 @@
                                 </button>
                                 <ul id="dropdown-authentication" class="hidden py-2 space-y-2">
                                     <li>
-                                        <a href="#"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Sign
-                                            In</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Sign
-                                            Up</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"
-                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Forgot
-                                            Password</a>
+                                        <a href="add-agent.html"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Add
+                                            Agent</a>
                                     </li>
                                 </ul>
                             </li>
@@ -672,12 +657,16 @@
                                             class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                                             Number</a>
                                     </li>
+                                    <li>
+                                        <a href="phone-number.html"
+                                            class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Telegram</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
 
                         <a href="/"
-                            class="hidden items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary hover:text-white group border-t border-yellow-500 hover:border-none">
+                            class="flex items-center justify-between p-2 text-base font-medium text-gray-900 rounded-lg dark:text-white hover:bg-primary hover:text-white group border-t border-yellow-500 hover:border-none my-8 lg:my-0">
                             <!-- Avatar -->
                             <div class="flex items-center gap-1">
                                 <img class="w-8 h-8 rounded-full object-cover object-center"
