--- a/unreg-number.html
+++ b/unreg-number.html
@@ -595,7 +595,7 @@
                 </button>
                 <ul id="dropdown-authentication" class="hidden py-2 space-y-2">
                   <li>
-                    <a href="#"
+                    <a href="/add-agent.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Add
                       Agent</a>
                   </li>
@@ -747,7 +747,142 @@
     </div>
   </main>
   <script src="/js/app.js"></script>
-  <script src="/js/data.js"></script>
+  <script>
+    const phoneOTP = [
+      {
+        id: 1,
+        amount: 7000,
+        status: "failed",
+        date: "21/4/2024, 2:30:45pm",
+        channel: "Flutterwave",
+        txID: "TX67890FGHIJ",
+        receipt: "pending",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 2,
+        amount: 4500,
+        status: "pending",
+        date: "22/4/2024, 11:50:10am",
+        channel: "Stripe",
+        txID: "TX11121JKLMN",
+        receipt: "verified",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 3,
+        amount: 6000,
+        status: "success",
+        date: "23/4/2024, 8:25:22pm",
+        channel: "PayPal",
+        txID: "TX31415OPQRS",
+        receipt: "check",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 4,
+        amount: 5200,
+        status: "success",
+        date: "24/4/2024, 7:15:34pm",
+        channel: "Kuda",
+        txID: "TX16171TUVWX",
+        receipt: "verified",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 5,
+        amount: 1500,
+        status: "failed",
+        date: "25/4/2024, 4:45:55pm",
+        channel: "Square",
+        txID: "TX18282YZABC",
+        receipt: "pending",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 6,
+        amount: 2500,
+        status: "pending",
+        date: "26/4/2024, 6:30:48am",
+        channel: "Kuda",
+        txID: "TX19393DEFGH",
+        receipt: "verified",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 7,
+        amount: 9000,
+        status: "success",
+        date: "27/4/2024, 12:10:15pm",
+        channel: "Paystack",
+        txID: "TX20404IJKLMN",
+        receipt: "check",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 8,
+        amount: 3500,
+        status: "success",
+        date: "28/4/2024, 1:20:25pm",
+        channel: "Flutterwave",
+        txID: "TX21515OPQRS",
+        receipt: "verified",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 9,
+        amount: 4700,
+        status: "pending",
+        date: "29/4/2024, 9:55:35am",
+        channel: "Stripe",
+        txID: "TX22626TUVWX",
+        receipt: "pending",
+        phone: "08168478017",
+        otp: 4589,
+      },
+      {
+        id: 10,
+        amount: 3000,
+        status: "success",
+        date: "20/4/2024, 10:15:32am",
+        channel: "Paystack",
+        txID: "TX12345ABCDE",
+        receipt: "verified",
+      },
+    ];
+
+    const tableUnReg = document.getElementById("tbodyUnReg");
+    const tableUnRegHTML = phoneOTP
+      .map(
+        (log, index) => `
+          <tr
+          class="bg-white border-b dark:bg-dark200 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-dark500"
+        >
+          <th
+            scope="row"
+            class="font-normal px-6 py-4 text-gray-900 dark:text-white text-gray-900 whitespace-nowrap dark:text-white"
+          >
+           ${index + 1}
+          </th>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">${log.phone}</td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">${log.date}</td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">${log.otp}</td>
+          <td class="px-6 py-4 text-gray-900 dark:text-white">${log.otp}</td>
+        </tr>
+
+      `
+      )
+      .join("");
+    tableUnReg.innerHTML = tableUnRegHTML;
+  </script>
 </body>
 
 </html>
