--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
           </div>
         </div>
       </nav>
+
       <!-- Sidebar -->
       <aside
         class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform -translate-x-full bg-white border-r border-gray-200 md:translate-x-0 dark:bg-dark300 dark:border-dark100"
@@ -672,7 +673,7 @@
       <!-- Dashboard -->
       <main class="p-4 md:ml-64 min-h-screen pt-20">
         <div class="pb-2">
-          <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-10">
+          <h1 class="text-xl lg:text-3xl font-medium text-primary tracking-tight mb-5">
             Welcome back, John!
           </h1>
           <p class="text-base lg:text-md text-gray-800 dark:text-gray-500 font-medium">
@@ -680,15 +681,15 @@
           </p>
         </div>
 
-        <div class="mt-3 lg:mt-4 flex flex-col lg:items-start lg:flex-row gap-4">
+        <div class="mt-5 lg:mt-4 flex flex-col lg:items-start lg:flex-row gap-4">
           <div class="lg:basis-1/7 flex flex-col jjustify-between">
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mb-4">
-              <div class="flex flex-col bg-white dark:bg-dark200 p-4 shadow-lg rounded-lg h-80 h-full">
+              <div class="flex flex-col bg-white dark:bg-dark200 p-4 shadow-lg rounded-lg max-h-80 h-full">
                 <h3 class="leading-none text-base font-semibold text-gray-900 dark:text-white pb-4">
                   Total Recharge
                 </h3>
                 <div
-                  class="flex text-neutral-600 flex-col justify-center items-center relative rounded-xl overflow-hidden h-full">
+                  class="flex text-neutral-600 flex-col justify-center items-center relative rounded-xl overflow-hidden h-40 lg:h-full">
                   <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg"
                     class="absolute z-10 fill-[#147860] duration-500">
                     <path transform="translate(100 100)"
@@ -969,7 +970,6 @@
         </div>
       </main>
 
-      <!-- </div> -->
   </main>
   <script src="/js/app.js"></script>
   <script src="/js/data.js"></script>
