--- a/check.html
+++ b/check.html
@@ -318,7 +318,6 @@
         </div>
       </nav>
 
-      <!-- Sidebar -->
       <aside
         class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform -translate-x-full bg-white border-r border-gray-200 md:translate-x-0 dark:bg-dark300 dark:border-dark100"
         aria-label="Sidenav" id="drawer-navigation">
@@ -420,7 +419,7 @@
                   </li>
 
                   <li>
-                    <a href="phone-otp"
+                    <a href="phone-otp.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                       OTP
                     </a>
@@ -595,7 +594,7 @@
                 </button>
                 <ul id="dropdown-authentication" class="hidden py-2 space-y-2">
                   <li>
-                    <a href="#"
+                    <a href="add-agent.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Add
                       Agent</a>
                   </li>
