--- a/phone-number.html
+++ b/phone-number.html
@@ -318,7 +318,6 @@
         </div>
       </nav>
 
-      <!-- Sidebar -->
       <aside
         class="fixed top-0 left-0 z-40 w-64 h-screen pt-14 transition-transform -translate-x-full bg-white border-r border-gray-200 md:translate-x-0 dark:bg-dark300 dark:border-dark100"
         aria-label="Sidenav" id="drawer-navigation">
@@ -420,7 +419,7 @@
                   </li>
 
                   <li>
-                    <a href="phone-otp"
+                    <a href="phone-otp.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Phone
                       OTP
                     </a>
@@ -595,7 +594,7 @@
                 </button>
                 <ul id="dropdown-authentication" class="hidden py-2 space-y-2">
                   <li>
-                    <a href="#"
+                    <a href="add-agent.html"
                       class="flex items-center p-2 pl-11 w-full text-base font-medium text-gray-900 rounded-lg transition duration-75 group hover:bg-primary dark:text-white hover:text-white">Add
                       Agent</a>
                   </li>
@@ -683,8 +682,8 @@
             </h2>
             <form class="max-w-sm mx-auto flex flex-col items-center" action="">
               <div class="flex flex-row items-center justify-between w-full">
-                <label for="email"
-                  class="basis-1/4 block mb-2 text-sm font- text-gray-900 dark:text-white">Email:</label>
+                <label for="phone" class="basis-1/4 block mb-2 text-sm font- text-gray-900 dark:text-white">Phone
+                  No:</label>
                 <div class="relative w-full">
                   <div class="absolute inset-y-0 start-0 top-0 flex items-center ps-3.5 pointer-events-none">
                     <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
